samples/_failures_safe/1761313188_8f1928_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_912d6233.c: In function ‘main’:
./samples/SAFE/__tmp_912d6233.c:166:12: error: missing terminating " character
  166 |     printf("Tokens
      |            ^~~~~~~
./samples/SAFE/__tmp_912d6233.c:166:5: error: expected expression at end of input
  166 |     printf("Tokens
      |     ^~~~~~
./samples/SAFE/__tmp_912d6233.c:166:5: error: expected declaration or statement at end of input
